@@ -12,6 +12,8 @@ What's New in Python 3.2 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #7173: Generator finalization could invalidate sys.exc_info().
+
 - Issue #7544: Preallocate thread memory before creating the thread to avoid
   a fatal error in low memory condition.
 
